--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
         </div>
 
 
-        <!-- REGISTRATION-FORM -->
+        <!-- SIGNUP-FORM -->
+        <form class="signup-form" action="https://echo.htmlacademy.ru" method="POST">
+          <h2 class="signup-form-heading">Sign up for the course and get free 7 days</h2>
+          <div class="signup-form-fields">
+            <input class="signup-form-field" type="text" name="name" placeholder="First name" aria-label="Name" required>
+            <input class="signup-form-field" type="text" name="last_name" placeholder="Last name" aria-label="Last name" required>
+            <input class="signup-form-field" type="email" name="email" placeholder="Email" aria-label="Email" required>
+            <input class="signup-form-field" type="password" name="password" placeholder="Password" aria-label="Password" required>
+          </div>
+          <button class="signup-form-submit" type="submit">Claim your free trial</button>
+          <div class="signup-form-notice">By clicking the button, you are agreeing to our <a class="signup-form-notice-link" href="#">Terms and Services</a></div>
+        </form>
       </div>
     </div>
   </div>
